# covid-19-case-tracker

./: .gitignore  README.md  docker-compose.yml  pnpm-workspace.yaml
backend/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: app.py
backend/app/api/: healthcheck.py
backend/app/api/v1/: api_v1.py
backend/app/api/v1/endpoints/: covid_19_statistics.py  email.py
backend/app/models/: covid_19_cases.py  email.py
backend/scripts/: clean.sh  install.sh  start-dev.sh  start.sh
backend/scripts/docker/: build.sh  clean.sh  start.sh  stop.sh
frontend/: .dockerignore  .gitignore  .npmrc  .nvmrc  Dockerfile  README.md  error.vue  nuxt.config.ts  package.json  uno.config.ts
frontend/components/: AppFooter.vue  AppHeader.vue  StatisticsMap.vue
frontend/layouts/: default.vue
frontend/pages/: contact.vue  home.vue  index.vue  statistics.vue
frontend/plugins/: svgmap.client.ts
frontend/scripts/: build.sh  clean.sh  run-docker.sh  start.sh  stop.sh
frontend/server/api/: contact.post.ts  covid19-statistics.get.ts
frontend/types/: contact.d.ts  statistics.d.ts  svgMap.d.ts
frontend/utils/: countries.ts
scripts/: clean-docker.sh  start.sh  stop.sh
