[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Vin E. R. Yap <vineryap@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.1"
uvicorn = "^0.21.1"
pydantic = { extras = ["email"], version = "^1.10.7" }
requests = "^2.28.2"
bleach = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
